@@ -138,6 +138,7 @@ Swords of Fury LG-2 (German)
 Teenage Mutant Ninja Turtles A 0.7 VUK (Prototype)
 Time Machine (Zaccaria, Italian Speech)
 Tommy 1.02 (Belgian), 2.01 (Dutch), 3.01 (German)
+Whirlwind LG-1 (German), LG-2 (German), PA-1 (Prototype) (at least the latter one incomplete though)
 White Water P-6 (Prototype)
 Wildfyre (One Ball MOD)
 Zankor (TMS5220 Italian Speech)
